@@ -81,7 +81,7 @@ tar -C web -xzf out/web.tar.gz
 %post
 
 touch /tmp/.lilypond-install
-rm `find /var/lib/texmf -name 'feta*pk -print' -or -name 'feta*tfm -print'` /tmp/.lilypond-install
+rm `find /var/lib/texmf -name 'feta*pk' -or -name 'feta*tfm' -or -name 'parmesan*pk' -or -name 'parmesan*tfm' -print'` /tmp/.lilypond-install
 
 %if info=="yes"
 /sbin/install-info %{_prefix}/info/lilypond.info.gz %{_prefix}/info/dir 
