@@ -183,6 +183,10 @@
 
 (define (placebox x y s) "")
 
+;; TODO: bezier-ending, see ps.scm
+(define (bezier-bow l thick)
+  (bezier-sandwich l thick))
+
 (define (bezier-sandwich l thick)
   (string-append (setlinewidth thick)
 		 (moveto-pair (list-ref l 7))
