@@ -223,6 +223,9 @@
    "\\placebox{"
    (number->dim y) "}{" (number->dim x) "}{" s "}%\n"))
 
+(define (bezier-bow l thick)
+  (embedded-ps (list 'bezier-bow  `(quote ,l) thick)))
+
 (define (bezier-sandwich l thick)
   (embedded-ps (list 'bezier-sandwich  `(quote ,l) thick)))
 
